--- a/filtro.html
+++ b/filtro.html
@@ -18,7 +18,7 @@
       <div id="lista-de-productos">
     </div>
   </div>
-  <script src="../filtro.js"></script>
+  <script src="filtro.js"></script> <!-- Corregi el link para que nos lleve al archivo correcto -->
 </body>
 
 </html>
